2. Backup/Backups/v36/2. Backup/00. Changelog.md
This will act as a changelog for the STL Slicer / AutoSupport project. Each entry will include a version number, a date, and a list of changes made during the current session. The version number will be based on the filename of the backup folder. These folders are incremental v1, v2, v3 etc. The updates should be newest to oldest versions.

## v36 - November 20, 2025
**Grid Supports Feature - Complete Implementation with Unified Branch Logic ✅**

- Implemented Grid Supports system for automatic support clustering and merging
  - Grid snapping: Supports snap to configurable grid intersections (default 10mm spacing)
  - Automatic trunk selection: Tallest support at grid node becomes trunk
  - Automatic branch creation: Other supports become branches attached to trunk
  - Trunk diameter: Automatically matches thickest support in cluster
  - Dynamic trunk switching: When taller support added, becomes new trunk, others reattach
  - Manual branch integration: Existing manual branches included in merge process
- Grid Settings UI
  - Toggle to enable/disable grid mode
  - Configurable grid spacing (millimeters)
  - Settings card in support sidebar
- Modular code architecture
  - Created `src/supports/Grid/` directory
  - `merging.ts`: Core grid merge logic
  - `GridSettingsCard.tsx`: UI component
  - Clean separation from manual placement logic
- Unified branch generation logic
  - Extracted branch creation to shared `src/supports/BranchSupports/createBranch.ts`
  - Both manual and grid branches use identical creation logic
  - Single source of truth for branch structure (Tip Joint → Mid Joint → Branch Joint)
  - Consistent behavior across all branch types
- Branch connection improvements
  - Reused `snapToTrunk` logic for finding attachment points
  - Grid branches snap to trunk shaft identically to manual branches
  - Proper joint structure with branch joint locked to parent
- Minimum branch angle constraint (45 degrees)
  - Prevents horizontal branches that won't print properly
  - Branch joint forced below tip by at least horizontal distance
  - Adjustable MIN_BRANCH_ANGLE_DEG constant for tuning
  - Ensures printability for resin 3D printers
- Trunk switching and reattachment
  - When existing support becomes trunk, base Z resets to floor level
  - All branches (manual and grid) recalculate connection points
  - Branch joints regenerate to lock to new trunk
  - Related branches (children of old trunk) automatically migrate to new trunk
- Visual representation
  - Grid-merged branches preview correctly during placement
  - Branch preview shows whether support will be trunk or branch
  - Correct joint rendering on all branch types

**Files Created:**
- `src/supports/Grid/merging.ts` - Grid snapping, merging, and branch connection logic
- `src/supports/Grid/GridSettingsCard.tsx` - Grid settings UI component
- `src/supports/BranchSupports/createBranch.ts` - Shared branch creation and joint regeneration

**Files Modified:**
- `src/supports/types.ts` - Added SupportGridSettings interface
- `src/supports/SupportSidebar.tsx` - Integrated GridSettingsCard
- `src/supports/hooks/useTrunkPlacement.ts` - Grid snapping and merge integration
- `src/supports/BranchSupports/placement/useBranchPlacement.ts` - Use shared createBranch function
- `src/supports/SupportPreview.tsx` - Preview rendering updates for grid mode

**Key Technical Details:**
- Grid merge algorithm: Identify roots at grid node → select tallest as trunk → reattach all others as branches
- Branch angle formula: `minVerticalDist = horizontalDist * tan(45°)`, ensures `maxAllowedZ = tipZ - minVerticalDist`
- Unified branch creation: `createBranch()` and `regenerateBranchJoints()` shared between manual and grid
- Cluster expansion: Includes both roots at grid node AND their existing children (manual branches)

**Default Settings:**
- Grid enabled: false (opt-in feature)
- Grid spacing: 10mm
- Minimum branch angle: 45 degrees from horizontal

## v35 - November 20, 2025
**Base Flare Feature - Conical Support Base for Better Adhesion ✅**

- Implemented base flare cone feature for trunk supports
  - Cone extends from build plate up to support shaft
  - Top diameter matches shaft diameter - 0.1mm (smooth transition)
  - Bottom diameter controlled by baseFlare.diameterMm setting (default 3mm)
  - Height controlled by baseFlare.heightMm setting (default 1.5mm)
  - Enabled by default for all new supports
- Base flare rendering
  - Renders on all trunk supports (not branches) when enabled
  - Works with or without raft enabled
  - Correct geometry orientation (wide at plate, narrow at shaft)
  - Real-time preview in SupportPreview component
- Settings management and UI
  - Added SupportBaseFlareProfile interface (enabled, diameterMm, heightMm)
  - Base Flare settings card in support sidebar
  - Toggle enable/disable, adjustable diameter and height
  - Real-time updates to all existing supports via useEffect
  - Validation for positive diameter and height values
- Code architecture improvements
  - Removed duplicate default settings from state.ts
  - Single source of truth: createDefaultSupportSettings() in types.ts
  - state.ts now imports and uses the function instead of hardcoding
  - Presets customize from base defaults (proper pattern)
- Fixed React render warnings
  - Moved updateAllSupportsBaseFlare to useEffect to avoid setState during render
  - Clean state update flow without component update conflicts

**Files Modified:**
- `src/supports/types.ts` - Added SupportBaseFlareProfile interface, updated defaults
- `src/supports/state.ts` - Import createDefaultSupportSettings, added updateAllSupportsBaseFlare function
- `src/supports/SupportRenderer.tsx` - Base flare cone rendering logic
- `src/supports/SupportPreview.tsx` - Base flare preview rendering
- `src/supports/SupportSidebar.tsx` - Base Flare UI controls with useEffect updates
- `src/supports/validation.ts` - Base flare validation rules
- `src/supports/presets.ts` - Updated all presets with baseFlare settings

**Default Settings:**
- Enabled: true
- Diameter: 3.0mm
- Height: 1.5mm
- Top radius: shaft radius - 0.05mm (0.1mm diameter reduction)

## v34 - November 20, 2025
**Branch Snapping Improvements - Depth-Aware & Multi-Segment ✅**

- Fixed branch snapping to use current shaft geometry after joint movement
  - Trunk snapping now uses actual joint positions, not original base position
  - Snaps to current shaft configuration when joints have been moved
  - Prevents snapping to "ghost" positions from initial placement
- Implemented depth-aware snapping prioritization
  - Added camera position parameter to `snapToTrunk()`
  - Prioritizes supports closest to camera when multiple supports overlap visually
  - If support is >1mm closer to camera, prefer it even if slightly farther from mouse
  - If depths within 1mm, use standard distance comparison
  - Ensures user can select visually front-most support in dense scenes
- Multi-segment shaft snapping
  - Trunks: Check all segments between consecutive joints, plus final segment to base
  - Branches: Check all segments from tip joint through middle joints to branch joint
  - Allows snapping anywhere along shaft polyline, not just endpoints
  - Handles complex bent shafts with multiple joints correctly
- Reduced snap distance for precision
  - Changed from 5mm to 3mm for more precise snapping
  - Makes it easier to select specific supports in dense areas
  - Still comfortable for normal use cases
- Fixed branch preview sphere sizing
  - Base sphere now sized to match parent shaft diameter + 0.1mm
  - Accurately represents the actual branch joint that will be created
  - Requires supports array to look up parent support diameter
- Camera position propagation
  - SceneCanvas adds camera position to hover events
  - page.tsx extracts and passes to branch placement hook
  - useBranchPlacement forwards to snapToTrunk
  - Clean data flow through component hierarchy

**Files Modified:**
- `src/supports/BranchSupports/snapping/snapToTrunk.ts` - Depth-aware multi-segment snapping
- `src/supports/BranchSupports/constants.ts` - Reduced snap distance to 3mm
- `src/supports/BranchSupports/placement/useBranchPlacement.ts` - Camera position handling
- `src/supports/BranchSupports/rendering/BranchPreview.tsx` - Parent-based sphere sizing
- `src/components/scene/SceneCanvas.tsx` - Camera position in hover events
- `src/app/page.tsx` - Camera position extraction and forwarding
- `1. Documentation/5. BranchSupports.md` - Updated snapping documentation

**Key Algorithm:**
```typescript
function shouldUpdateBest(newDist, newPos, bestDist, bestDepth, snapThreshold, cameraPos) {
  if (newDist > snapThreshold) return false;
  if (!cameraPos) return newDist < bestDist;
  
  const newDepth = distance(newPos, cameraPos);
  const depthDiff = bestDepth - newDepth;
  
  if (depthDiff > 1.0) return true;  // Significantly closer to camera
  if (Math.abs(depthDiff) <= 1.0) return newDist < bestDist;  // Similar depth, use distance
  return false;  // Farther from camera
}
```

## v33 - November 20, 2025
**Raft System - Complete Implementation with Crenelated Walls ✅**

- Implemented dynamic crenelated raft for 3D printing supports
  - Raft footprint computed from support base circles using convex hull
  - 0.5mm thick base plate with 45° chamfered edges (adjustable 45-90°)
  - Perimeter wall with rectangular crenelations (suction relief slots)
  - Wall sits on top of base, fully manifold geometry
- Chamfered base geometry
  - Top surface at raft thickness, bottom surface offset by chamfer
  - Smooth angled transition from top to bottom
  - Correct normals and validation to prevent NaN errors
- Crenelated wall implementation
  - Manual geometry construction for manifold mesh
  - Straight edge detection using angle tolerance (≤15°)
  - 1 rectangular gap per straight edge, evenly centered
  - Perpendicular side faces close each gap opening
  - Curved edges remain solid (no crenelations)
  - Gap width controlled by crenulationGapWidth setting
- Raft rendering and integration
  - RaftRenderer subscribes to support and raft state
  - Auto-updates when supports are added/moved
  - Base raft: blue, perimeter wall: green (for testing)
  - Support base discs hidden when raft enabled
  - Opaque rendering (not preview mode)
- Raft Settings UI card
  - Separate card from support settings
  - Sliders with numeric text inputs for all parameters
  - Enable toggle, collapsible header
  - Controls: thickness (0.5mm), chamfer angle (45°), wall height (0.35mm), wall thickness (0.5mm)
  - Removed crenulation gap/spacing controls (fixed count per edge)
- Default settings optimized
  - Thickness: 0.5mm, Chamfer: 45°, Wall Height: 0.35mm, Wall Thickness: 0.5mm

**Files Created:**
- `src/supports/Rafts/Crenelated/RaftTypes.ts` - Type definitions
- `src/supports/Rafts/Crenelated/RaftDefaults.ts` - Default settings
- `src/supports/Rafts/Crenelated/RaftState.ts` - State management
- `src/supports/Rafts/Crenelated/geometry/computeFootprint.ts` - Convex hull footprint
- `src/supports/Rafts/Crenelated/geometry/generateBasePlate.ts` - Base extrusion
- `src/supports/Rafts/Crenelated/geometry/generateChamferedBase.ts` - Chamfered base mesh
- `src/supports/Rafts/Crenelated/geometry/generatePerimeterWall.ts` - Solid wall
- `src/supports/Rafts/Crenelated/geometry/generateCrenelatedWallManual.ts` - Crenelated wall with gaps
- `src/supports/Rafts/Crenelated/geometry/insetConvexPolygon.ts` - Polygon inset utility
- `src/supports/Rafts/Crenelated/geometry/utils.ts` - Geometry helpers
- `src/supports/Rafts/Crenelated/rendering/RaftRenderer.tsx` - 3D rendering component
- `src/supports/Rafts/Crenelated/components/RaftSettingsCard.tsx` - UI controls

**Files Modified:**
- `src/app/page.tsx` - Added RaftSettingsCard to support mode UI
- `src/supports/SupportRenderer.tsx` - Hide base discs when raft enabled
- `src/components/scene/SceneCanvas.tsx` - Integrated RaftRenderer

## v32 - November 19, 2025
**Performance Fix - Removed Console Spam ✅**

- Fixed severe performance lag during joint movement
  - Removed debug console.log in SupportRenderer that was firing on every frame
  - Console.log was logging for every support on every render during gizmo drag
  - Joint movement now perfectly smooth without frame drops

**Files Modified:**
- `src/supports/SupportRenderer.tsx` - Removed debug logging spam

## v31 - November 19, 2025
**Branch Joint System - Complete Tree Structure with Constraints ✅**

- Implemented new branch joint type for parent-child support connections
  - Added `JointType` enum: `'standard' | 'branch'`
  - Extended `SupportJoint` interface with `type` and `lockedToSupportId` fields
  - Branch joints render in yellow, diameter = parent shaft + 0.1mm
  - Branch supports now have 3 joints: tip joint, middle joint, branch joint
- Branch joint movement constraints
  - Branch joints locked to parent support shaft, can only slide along shaft axis
  - `constrainBranchJointToShaft()` projects position onto nearest shaft segment
  - Handles multi-segment shafts with joints correctly
  - Gizmo movement applies constraint in real-time (live updates)
- Recursive branch tree updates
  - When parent support moves, all child branches update recursively
  - Trunk → Branch1 → Branch2 → Branch3... entire tree stays connected
  - Live updates during drag for immediate visual feedback
  - Single undo entry committed at end of drag
- Branch-to-branch support
  - Can snap new branches to existing branch shafts
  - `snapToTrunk()` handles both trunk and branch parents
  - Shaft endpoints calculated correctly: tip joint → branch joint (no phantom extensions)
- Fixed joint preview phantom projections
  - Joint preview limited to actual shaft segments (tip joint → branch joint)
  - No more floating preview beyond branch joint
  - Correct shaft end calculation for both trunks and branches
- Joint gizmo deselection improvements
  - Click background to deselect joint and hide gizmo
  - Selecting a support automatically deselects any selected joint
  - Clean workflow for switching between support and joint selection
- Removed extra shaft segment below branch joints
  - `buildShaftSegments()` skips final segment if last joint is branch type
  - Branch supports correctly render: cone → tip joint → shaft → branch joint

**Files Modified:**
- `src/supports/Joints/types.ts` - Added JointType and extended SupportJoint interface
- `src/supports/components/BallJoint.tsx` - Yellow rendering for branch joints
- `src/supports/BranchSupports/placement/useBranchPlacement.ts` - Added middle joint, branch joint creation
- `src/supports/BranchSupports/constraints/branchJointConstraint.ts` - NEW: Constraint logic for branch joints
- `src/supports/BranchSupports/constraints/updateBranchJoints.ts` - NEW: Recursive tree updates
- `src/supports/BranchSupports/snapping/snapToTrunk.ts` - Branch-to-branch snapping support
- `src/supports/SupportRenderer.tsx` - Skip shaft segment below branch joints
- `src/components/scene/SceneCanvas.tsx` - Gizmo constraint application, joint preview fixes, deselection logic
- `src/app/page.tsx` - Support selection deselects joints

**Key Features:**
- Full tree structure: trunk → branch → branch → branch...
- All branches stay connected when parent moves (live + recursive)
- Branch joints constrained to parent shaft (yellow, larger diameter)
- Clean joint/support selection workflow
- No phantom projections in joint preview

## v30 - November 19, 2025
**Branch Support Creation - Full Workflow Complete ✅**

- Completed branch support finalization and rendering
  - Second click (anywhere while snapped) creates branch support instance
  - Branch supports link to parent via `parentBaseId` field
  - Contact cone tip on model, base snapped to parent support shaft
- Fixed React state batching issues preventing branch creation
  - Combined setState calls to avoid intermediate `idle` stage
  - Added `stateRef` for synchronous state access in event handlers
  - Canvas and page.tsx handlers check ref to bypass stale props
- Branch-specific rendering adjustments
  - Removed base disc from branch supports (only trunks have base discs)
  - Branch base attaches directly to parent support shaft
  - Added tip joint at contact cone base for branch supports
- Fixed support/joint selection blocked by Canvas onClick handler
  - Removed R3F Canvas onClick that was catching all clicks
  - Div onClick handler sufficient for background clicks
- Event flow debugging and fixes
  - Routed clicks to branch handler when in `baseFollow` stage
  - Allowed second click even if Alt released between clicks
  - Verified mesh clicks reach branch placement handler

**Files Modified:**
- `src/supports/BranchSupports/placement/useBranchPlacement.ts` - Branch finalization, ref-based state, tip joint creation
- `src/supports/SupportRenderer.tsx` - Conditional base disc rendering (trunks only)
- `src/components/scene/SceneCanvas.tsx` - Removed Canvas onClick, added branchStateRef prop
- `src/app/page.tsx` - Ref-based routing for branch vs trunk clicks

## v29 - November 19, 2025
**Branch Support Placement - Preview, Snapping, and Free 3D Tracking ✅**

- Implemented complete branch placement workflow with Alt key toggle
  - First click (Alt+click on model): Places contact cone, enters base-follow mode
  - Second click: Finalizes branch only when snapped to valid support shaft
- Fixed branch preview rendering and orientation
  - Contact cone: small end (contact face) on model, large end (socket face) at shaft start
  - Used cylinderGeometry frustum (not coneGeometry) to match trunk preview exactly
  - Preview shows contact cone + shaft + three joints (contact, mid, base)
- Implemented free 3D mouse tracking for branch base (not stuck to model mesh)
  - Screen-to-world projection using camera unproject at contact Z depth
  - Reused joint placement pattern for consistent 3D tracking
  - Base moves freely in 3D space until near a support shaft
- Fixed branch snapping to support shafts
  - Projects mouse position onto actual shaft geometry (tip socket → base top)
  - Snaps to shaft centerline (not surface offset) for exact alignment
  - 5mm snap threshold with visual feedback (color change when snapped)
- Clean preview switching behavior
  - Alt held (idle): trunk preview continues normally
  - Alt + first click: trunk preview clears, branch preview appears
  - Alt released: branch preview clears, trunk preview resumes
- Fixed infinite render loop and userData errors in SceneCanvas
  - Used ref pattern to break state update cycle
  - Added fake userData to prevent raycast errors

**Files Modified:**
- `src/supports/BranchSupports/placement/useBranchPlacement.ts` - Branch placement state machine with Alt detection
- `src/supports/BranchSupports/snapping/snapToTrunk.ts` - Shaft projection and snap logic using actual shaft endpoints
- `src/supports/BranchSupports/rendering/BranchPreview.tsx` - Preview component with correct cone orientation
- `src/components/scene/SceneCanvas.tsx` - Free 3D mouse tracking and branch base world position computation
- `src/app/page.tsx` - Unified hover/click handlers routing to branch or trunk placement

## v28 - November 18, 2025
**Refactor: Support Logic Out of page.tsx; Organized Under supports/**

- Extracted support hotkeys to `supports/hooks/useSupportHotkeys`
- Extracted joint creation hotkey to `supports/hooks/useJointCreationHotkey`
- Extracted trunk placement hover/click to `supports/hooks/useTrunkPlacement`
- Extracted delete-selected-support to `supports/hooks/useSupportDeletion`
- Replaced inline validation toast with `components/ui/SupportToasts`
- Updated imports in `src/app/page.tsx`; slimmed file and kept wiring only
- Removed old hooks from `src/hooks/` (migrated fully under `supports/`)

## v27 - November 18, 2025
**Support Types Common-Language Doc, Branch Planning, and Module Scaffolding ✅**

- Wrote a plain-language Support Types reference with clear terminology
  - Added contact cone (contact face ↔ socket face), leaves vs twigs, braces, rafts
  - Clarified trunk vs shaft with at-a-glance callout
  - Added Leaf vs Twig at-a-glance and refined definitions throughout
- Created SupportTypes diagram (SVG) for reference, then removed after testing readability
- Authored Branch Development Plan (Scratch/BranchDevelopmentPlan.md)
  - Alt to Branch two-stage placement, dynamic snap switching, branch-owned joint, conversion to trunk
  - Snapping/validation thresholds and acceptance criteria captured
- Scaffolded modular BranchSupports/ with feature flag and stubs
  - placement/, snapping/, joints/, validation/, rendering/ with index and README
  - Implemented minimal BranchPreview component (contact→base line, snapped state)
- No refactors to page.tsx yet (not started) pending backup

## v26 - November 18, 2025
**Joint Editing Polishing & Base Anchoring ✅**

- Disabled support placement when a joint is selected, when dragging the gizmo, and for the first click after drag (suppressed click)
- Hid SupportPreview while joint is selected/dragging to avoid visual clashes
- Support hover highlight masked for the support owning the selected joint (others still highlight)
- Base (disk) and shaft end anchored at original base XY; no drift when moving joints
- Initial base placement now directly under tipEnd (tip joint), not tip point

## v25 - November 18, 2025
**Gizmo Movement, Tip Joint Control, Preview along Bent Shaft ✅**

- Added joint move gizmo; live updates via history-muted store updates; single undo on drag end
- Deselect by clicking empty canvas; joint remains selected after gizmo drag (suppressed synthetic click)
- Tip joint is movable: moving it updates tip length and tip normal; joint snaps to tipEnd (no gaps)
- Segment building ensures last segment always connects to base top
- Joint preview follows current bent shaft polyline (tipEnd → joints → base top)
- Sensible interaction guards: hover/placement muted while dragging

## v24 - November 18, 2025
**Interactive Joint Creation System - Phase 4B Complete ✅**

**J Key Hold-to-Create Workflow**
- Hold J key anywhere to activate joint creation mode
- Hover over any support to see cyan preview sphere
- Move mouse up/down to position joint along shaft
- Click to place joint at preview position
- Release J to exit mode
- No need to pre-select support - works on hover

**Camera-Aware Screen Projection**
- Implemented proper 3D-to-2D screen space projection using Three.js camera
- Projects shaft endpoints (tipEnd and shaftEnd) to screen coordinates
- Maps mouse Y position relative to shaft's actual screen bounds
- Accurate initial positioning regardless of camera zoom/distance
- True 1:1 mouse movement with joint preview movement
- Created `CameraProvider` component to pass camera from Canvas context

**Preview Sphere System**
- `JointPreviewSphere.tsx`: Cyan semi-transparent sphere (60% opacity)
- Diameter: shaft diameter + 0.1mm (matches actual joints)
- Smooth real-time tracking of mouse movement
- Preview "sticks" to last hovered support when mouse moves away
- Switches to new support when hovering over different support

**Joint Creation Logic**
- `addJointToSupport()` function in state.ts
- Creates joint with correct diameter at preview position
- Automatically sorts joints by Z position (top to bottom)
- Reindexes joint order after insertion
- Marks topmost joint as `isTipJoint`
- Triggers undo/redo history for joint additions
- Supports render immediately with new joint and split shaft segments

**Mode Isolation & Conflict Prevention**
- Disabled support placement preview during joint creation mode
- Prevented support creation clicks in joint creation mode
- Disabled support hover highlight in joint creation mode (visual only)
- Maintained hover detection for joint preview targeting
- Clear hover state when exiting joint creation mode
- Background clicks create joints instead of deselecting supports

**State Management**
- Added `jointCreationMode` boolean state
- Added `jointPreview` state with supportId, position, segmentIndex
- Added `selectedJointId` and `hoveredJointId` for future gizmo work
- Props threaded through: page.tsx → SceneCanvas → SupportRenderer
- Used refs to prevent infinite loops with callback dependencies

**UX Refinements**
- Mouse movement tracked continuously (not just in J mode)
- Initial preview position matches mouse cursor location
- Movement feels natural and responsive
- No visual artifacts or stuck states
- Smooth transitions between supports
- Clear visual feedback with cyan preview color

**Technical Implementation**
- Delta-based movement calculation with screen-to-world conversion
- Camera projection using `Vector3.project()` for NDC coordinates
- Normalized Device Coordinates (-1 to 1) converted to screen space (0 to 1)
- Clamped t-value (0-1) for shaft interpolation
- Fallback to sensitivity-based mapping if camera unavailable

**Bug Fixes**
- Fixed infinite loop from `supports` array in dependency
- Fixed duplicate `useThree` import error
- Fixed hover state getting stuck after releasing J
- Fixed support creation triggering during joint placement
- Resolved initial position offset at different zoom levels
- Fixed movement speed mismatch with mouse movement

**Status**: Phase 4B complete - interactive joint creation fully functional with perfect mouse tracking. Ready for Phase 4D (joint selection and gizmo transformation).

## v23 - November 18, 2025
**Support Joints System - Phase 4A Foundation & Rendering ✅**

**Modular Joints System Architecture**
- Created complete modular system in `src/supports/Joints/` directory
- 9 focused modules: types, geometry, validation, factory, shaftSplitting, shaftRecalculation, raycasting, index, README
- Full TypeScript type safety with comprehensive interfaces
- Centralized barrel exports for clean imports

**Core Utility Modules**
- `types.ts`: Complete type definitions for joints, segments, states, and operation results
- `geometry.ts`: 3D math utilities (distance, vectors, angles, projection, interpolation)
- `validation.ts`: Comprehensive validation (spacing, bounds, angles, diameter, movement)
- `factory.ts`: Joint creation, updates, cloning, serialization/deserialization
- `shaftSplitting.ts`: Segment splitting logic, joint insertion, chain management
- `shaftRecalculation.ts`: Segment updates when joints move, invariant validation
- `raycasting.ts`: Mouse interaction, hit detection, magnetic snapping utilities

**Rendering System**
- `BallJoint.tsx`: Spherical joint rendering with selection/hover states (gray/light gray/blue)
- `ShaftSegment.tsx`: Dynamic cylinder rendering between two 3D points with auto-rotation
- Updated `SupportRenderer.tsx`: Multi-segment support rendering with N+1 segments for N joints
- Custom `buildShaftSegments()` function: Correctly starts segments from tipEnd (base of tip cone)

**Support Creation Integration**
- Updated `placement.ts`: Automatic joint creation on support placement
- **Mandatory Tip Joint**: ALWAYS positioned at tipEnd (base of tip cone) - structural connection
- **Additional Joints**: Configurable count distributed evenly along remaining shaft
- Joint diameter: Shaft diameter + 0.1mm for proper visual connection
- Total joints: 1 (tip) + defaultJointCount (additional)

**Preset Configuration**
- Detail preset: 0 additional joints (1 total - tip joint only)
- Structure preset: 1 additional joint (2 total - tip + middle)
- Anchor preset: 2 additional joints (3 total - tip + 2 along shaft)
- Explicit preset definitions with `defaultJointCount` field

**Data Model Updates**
- Added `defaultJointCount` to `SupportJointSettings` interface
- Added `joints` array to `SupportInstance` interface
- Added `isTipJoint` flag to distinguish mandatory tip joint
- Support instances now include joint data in serialization

**Critical Design Decisions**
- Tip joint is mandatory and non-configurable (structural requirement)
- Shaft segments calculated from tipEnd to top of base raft (not to plate)
- Base raft positioned under shaft (not under tip point)
- Joints distributed along visible shaft only
- Immutable update patterns throughout

**Bug Fixes**
- Fixed shaft positioning to start from tipEnd instead of tip point
- Fixed base raft alignment to be under shaft centerline
- Fixed joint distribution to use correct shaft endpoints
- Resolved preset caching issue with defaultJointCount field

**Status**: Phase 4A complete - supports render correctly with variable joint counts. Ready for Phase 4B (interactive joint creation) and Phase 4D (gizmo transformation).

## v22 - November 17, 2025
**Transform Gizmo Scaling System Overhaul ✅**

**Absolute Distance-Based Scaling**
- Completely redesigned scaling logic to use absolute distance from gizmo center
- Mouse distance from center directly controls scale factor (ratio-based)
- Moving toward center scales down (approaching 0 at center)
- Moving away from center scales up proportionally
- Eliminates threshold behavior - smooth continuous scaling in any direction
- No dependency on starting position - purely based on current distance from center

**Left/Right Click Scaling Modes**
- **Left click**: Uniform scaling (all axes together)
- **Right click**: Per-axis scaling (only the selected axis)
- Mouse button detection on `pointerdown` event
- Mode passed through component chain: GizmoScaleHexagon → TransformGizmo → SceneCanvas

**Scaling Implementation Details**
- `startDistance`: Records initial distance from gizmo center when drag begins
- `initialScaleRef`: Stores mesh scale at drag start for absolute ratio application
- Scale factor calculated as: `currentDistance / startDistance`
- Applied to initial scale: `initialScale * ratio`
- Supports both uniform and per-axis scaling modes
- 3D gizmo position projected to 2D screen space for accurate distance calculation

**Sensitivity Tuning**
- Initial sensitivity: 0.001 (too slow)
- Final sensitivity: 0.005 (responsive and controllable)
- Provides good balance between precision and speed

**UX Improvements**
- Much easier to scale down - plenty of space between handle and center
- Intuitive behavior matching industry-standard 3D software
- No confusing threshold zones or direction reversals
- Consistent scaling behavior regardless of mouse position

## v21 - November 17, 2025
**Transform Gizmo Interaction & Visual Feedback Refinements ✅**

**Hover Dimming System**
- Implemented visual dimming on all non-active gizmo parts when hovering over any handle
- Dimmed parts fade to 15% opacity (85% transparent) with light grey color (#cccccc)
- Only the hovered/active handle and its associated line/arc retain full color
- Point lights disabled on dimmed parts to prevent color bleed
- Applied consistently across move arrows, rotation rings, scale cubes, and center disc

**Drag Visibility System**
- All non-active gizmo parts become completely invisible (opacity 0) during drag operations
- Only the actively dragged handle and its associated line/arc remain visible
- Provides clear visual focus on the active transformation tool
- Hover dimming preserved - only active drag triggers full hiding

**Hover Color Behavior**
- Removed orange hover color changes - handles now retain their original axis colors
- Move arrows: Always use axis colors (red/green/blue)
- Rotation rings: Always use ring colors (axis-specific)
- Scale cubes: Always use axis end colors
- Center disc: Always white

**Render Order Fixes**
- Arrow shafts set to `renderOrder={-10}` to render behind scale cubes
- Prevents visual overlap where shafts appeared in front of cubes
- Maintains `depthTest={false}` for gizmo to always appear on top of mesh

**World-Space Transformations**
- **Rotation**: Implemented quaternion-based world-space rotation using `premultiply`
- **Scale**: Transform world axis to local space for consistent scaling behavior
- Gizmo rotation fixed to `[0, 0, 0]` - always aligned to world axes regardless of mesh rotation
- Ensures consistent transformation behavior regardless of mesh orientation

**Rotation Direction Fixes**
- Added camera flip detection for rotation rings (matches move arrow behavior)
- Rotation direction inverts when camera crosses axis plane to maintain consistent mouse-to-rotation mapping
- All three axes (X, Y, Z) now follow mouse direction correctly
- Visual arc feedback and object rotation stay synchronized

**Lighting Enhancements**
- Emissive intensity increased: idle 0.8, hovered 1.2, active 2.0 (user adjusted to 20)
- Point light intensity increased: idle 1.5, hovered 2.5, active 3.5 (user adjusted to 20)
- Point light distance increased from 3.0 to 8.0 for broader illumination
- Point light decay reduced to 0.9 for softer falloff
- Center disc emissive and point light disabled (no glow on white center)

**Diamond Handle Opacity Fix**
- Rotation ring diamond handles now use main `opacity` variable instead of hardcoded values
- Ensures diamonds properly hide during drag operations
- Both outline and main cone meshes respect opacity state

**Scale Cube Edge Opacity Fix**
- Cube edges now use main `opacity` variable instead of separate `edgeOpacity`
- Ensures edges properly hide during drag operations
- Consistent visibility behavior with cube faces

**Technical Implementation**
- `isHidden` function checks if part should be completely invisible during active drag
- `isDimmed` function checks if part should be semi-transparent during hover
- Camera-relative flip detection via `useFrame` comparing camera position to gizmo position
- Quaternion math: `new THREE.Quaternion().setFromAxisAngle(worldAxis, -angle)`
- World-to-local axis transformation: `worldAxis.applyQuaternion(quaternion.invert())`

## v20 - November 16, 2025
**Transform Gizmo Color & Visual Polish ✅**

**Center Handle Redesign**
- Replaced center sphere with flat circular plane aligned on XY axis
- Movement restricted to XY plane only (Z delta zeroed during drag)
- Added 50% transparency when idle, full opacity when active/hovered
- White border ring around disc for clear visual definition
- Reduced disc size by 30% for refined appearance

**Scale Handle Updates**
- Replaced hexagons with cubes (boxGeometry) for cleaner geometric look
- Implemented dynamic camera-facing edge rendering (only front edges visible)
- Edges use darker version (30%) of cube color for contrast
- Increased cube size by 25% (scaleHexagonRadius: 0.33)
- Custom `CubeWithFrontEdges` component calculates visible edges via face normal dot product

**Outline System**
- Added Blender-style outlines to move arrows and rotation handles
- Outlines use 15% scaled geometry with 30% darker color (inverted hull technique)
- Color-matched: red arrows get dark red outlines, green get dark green, etc.
- Removed fake borders after testing - cleaner without artificial outline effect

**Gradient Color System**
- **Pure colors at center**: Red #ff0000 (X), Green #0ce300 (Y), Blue #0000ff (Z)
- **Secondary colors at ends**: Orange #ff9900 (X), Yellow #ffcc00 (Y), Bright blue #1596ff (Z)
- Move axis lines: Pure color for first 1/3, fade to secondary over remaining 2/3
- Rotation arcs: Pure color at center 40%, fade in outer 60% to ends
- Added `toneMapped={false}` to prevent color washing - ensures vibrant pure colors

**Rotation Arc Improvements**
- Converted from WebGL lines to tube geometry (radius 0.02) to match axis line thickness
- Implemented gradient vertex colors on tube geometry
- Arc thickness now matches axis lines exactly
- Uses `meshBasicMaterial` with vertex colors for smooth gradient rendering

**Technical Implementation**
- Gradient geometries use `THREE.BufferAttribute` with per-vertex RGB color data
- Color interpolation via `THREE.Color().lerpColors()` for smooth transitions
- Dynamic edge visibility calculated each frame via `useFrame` and camera direction
- Tube geometry created with `THREE.CatmullRomCurve3` for smooth arc paths

## v19 - November 16, 2025
**Transform Gizmo Visual Refinements ✅**

**Move Axis Improvements**
- Replaced 2px lines with gradient cylinders (0.02 radius) for smooth color transitions
- Implemented custom vertex color gradients: start color at center → end color at tip
- Updated color scheme: Orange→Red (X), Yellow-green→Green (Y), Light blue→Bright blue (Z)
- Final colors: X ends at #FF3120, Y ends at #00FF00, Z ends at #1596FF
- Reduced arrow cone size by 50% (radius 0.16, length 0.4) for refined appearance
- Hidden center sphere for cleaner visual design

**Rotation Ring Enhancements**
- Replaced diamond handles with double-cone arrows (<> shape) pointing along rotation direction
- Cones billboard to camera while maintaining tangent alignment with ring
- Reduced cone radius to 0.4x for slimmer profile
- Implemented split-arc rendering: colored front half (2px) + muted gray back half (1px)
- Front arc dynamically rotates to always face camera using same angle as handles
- Back arc uses #666666 gray at half thickness for depth perception
- Per-axis rotation corrections for proper camera tracking

**Line Thickness Updates**
- Reduced all gizmo lines from 4px to 2px for cleaner appearance
- Back rotation arcs use 1px (50% of front arc thickness)

**Technical Details**
- Gradient cylinders use `THREE.BufferAttribute` with per-vertex RGB colors
- Billboard rotation calculated via `useFrame` with camera direction vectors
- Rotation rings use fixed 180° front/back arcs that rotate as a group
- Handle angle drives both cone position and arc rotation for perfect synchronization

## v18 - November 16, 2025
**Unified Transform Gizmo Implementation ✅**

**Core Gizmo System**
- Created modular transform gizmo component supporting move, rotate, and scale operations
- Organized file structure: `move/`, `rotate/`, `scale/` folders for each operation type
- Implemented screen-space sizing (gizmo maintains constant visual size regardless of zoom)
- Added `enableLighting` toggle for emissive materials and point lights (performance option)

**Visual Design**
- Thick, bright lines (4px width) using drei's `Line` component for proper rendering
- Solid axis colors: Red (X), Yellow (Y), Blue (Z) - matching world axes
- Move arrows with cone handles at tips
- Rotation rings with diamond (octahedron) handles
- Scale hexagons with radial gradient (unique signature design)
- Emissive materials with state-based intensity (idle/hovered/active)
- Point lights at handles cast colored light on model for polished look

**Camera-Relative Behavior**
- All axis handles flip based on camera position to stay visible
- X axis flips when camera crosses X plane
- Y axis flips when camera crosses Y plane
- Z axis flips when camera crosses Z plane (horizontal)
- Handles always point away from camera like professional 3D software

**Integration**
- Added "Transform" mode button to toolbar (⬙ icon)
- Unified gizmo replaces separate move/rotate/scale tools
- Disabled scale hexagon connection lines to avoid overlap with move arrows
- Full TypeScript typing for all components and props
- Proper coordinate system handling (Z is up/height)

**Technical Implementation**
- `ScreenSpaceGizmo` wrapper calculates scale based on camera distance (0.04 multiplier)
- `useFrame` hook updates flip states every frame for smooth transitions
- Removed duplicate geometry (old gradient cylinder/torus meshes)
- Fixed line positioning to start from gizmo center (0,0,0)
- Proper rotation matrices for each axis orientation

## v17 - November 16, 2025
**Support System Implementation - Phase 1, 2 & 3A Complete**

**Phase 1: Data Model & Persistence Foundation ✅**
- Extended `SupportSettings` interface with full schema (tip, mid, base, baseJoint, extra, adaptiveBase, jointDefaults)
- Extended `SupportInstance` interface with spatial data, lifecycle flags, hierarchy refs, metadata
- Implemented validation helpers (zod-style) for settings and instance structures
- Built normalized support store (byId/allIds) with add/update/remove/selectors
- Replaced page.tsx local arrays with selectors from normalized store
- Integrated undo/redo system with history stack (Ctrl+Z / Ctrl+Shift+Z)
- Extended scene serialization to persist supports collection with versioning
- Updated conversion codex with field mappings (AutoSupport ↔ Lychee schema)
- Comprehensive unit tests for schema/store/serialization (19 tests passing)
- Manual save/load sanity checks completed successfully
- Support export/import to JSON files for backup and sharing

**Phase 2: Preset Architecture ✅**
- Implemented 3 built-in support presets with MSLA-optimized defaults:
  - **Detail** (🔬 key 1): 0.2mm contact, 0.8mm shaft, 4mm base - fine supports for delicate features
  - **Structure** (🏗️ key 2): 0.3mm contact, 1.0mm shaft, 5mm base - balanced general-use
  - **Anchor** (⚓ key 3): 0.4mm contact, 1.5mm shaft, 7mm base - heavy supports for large overhangs
- Hotkey switching (1/2/3 keys) instantly changes active preset
- Compact preset cards with aligned stats columns (tip|shaft|base)
- Preset editor for custom presets (built-ins show info message)
- localStorage persistence + JSON export/import for presets
- Active preset switching automatically updates support settings

**Phase 3A: Placement Validation ✅**
- Surface-to-surface distance validation (not just center-to-center)
- 0.1mm minimum clearance between support surfaces
- Formula: `minDistance = (radius1 + radius2) + minClearance`
- Preview color feedback: green = valid, red = invalid (too close)
- Placement blocked when validation fails
- Clean toast notification system (2-second auto-hide, no popups)
- Works dynamically with all preset sizes

**Technical Implementation**
- Created `src/supports/presets.ts` with full preset store (CRUD, serialization, subscriptions)
- Created `src/supports/validation.ts` with surface-based collision detection
- Updated `SupportPreview.tsx` to show validation colors
- Updated `PresetCard.tsx` with compact inline layout
- Added `PresetSelector.tsx` and `PresetEditor.tsx` components
- Integrated validation into hover and click handlers in `page.tsx`
- Added CSS fade-in animation for toast notifications

**Files Created**
- `src/supports/presets.ts` - Preset store with built-in presets
- `src/supports/PresetCard.tsx` - Compact preset card component
- `src/supports/PresetSelector.tsx` - Preset grid selector
- `src/supports/PresetEditor.tsx` - Modal editor for custom presets
- `Scratch/SupportPresetsPlan.md` - Phase 2 development plan
- `Scratch/SupportPlacementPlan.md` - Phase 3 development plan

**Files Modified**
- `src/supports/types.ts` - Added SupportPreset and PresetCollection interfaces
- `src/supports/validation.ts` - Added placement validation with surface-to-surface distance
- `src/supports/SupportPreview.tsx` - Added validationLevel prop and color feedback
- `src/supports/SupportSidebar.tsx` - Integrated PresetSelector, added export/import buttons
- `src/supports/state.ts` - Added exportSupportsToFile and importSupportsFromFile
- `src/app/page.tsx` - Added preset hotkeys, validation integration, toast notification
- `src/components/scene/SceneCanvas.tsx` - Pass validationLevel to preview
- `src/app/globals.css` - Added fadeIn animation for toast

**User Experience Improvements**
- Instant preset switching with visual feedback
- No more overlapping supports (validated placement)
- Clean error messages (toast instead of alert popup)
- Export/import for backup and sharing
- Keyboard-driven workflow (1/2/3 for presets, Delete for removal)


## v16 - November 16, 2025
**Support Planning Consolidation & Data Model Roadmap**

**Highlights**
- Renamed the high-level support plan to `SupportDevelopmentBrainstorm.md` to clearly denote its brainstorming status.
- Authored `SupportDataModelPlan.md`, detailing goals, schema tasks, dependencies, and execution checklist for the data-model foundation phase.
- Captured development ideology (all support code under `src/supports`, modular files, unique naming) and added a 10-step checklist for tracking progress.

**Documentation Updates**
- Added advanced editing (Grab tool), Blender-style hotkeys, grid auto-activation rules, island-size guidance, selective island placement, stability scoring, resin estimate caveats, and RuneBrace-style smoothing brush notes.
- Stated that the future LYS converter will be a separate tool and refined the manual testing requirements to focus on our own scenes for now.

**Result**
- Support roadmap and data-model tasks are now formalized, enabling focused implementation work in upcoming sessions.

## v15 - November 15, 2025
**Support Placement Performance Fix - Console Logging Removal**

**Problem Solved**
- 4-5 second delay when placing supports on the model
- Severe UI blocking during support click events
- Performance degradation with multiple supports in the scene

**Root Cause**
- Excessive console.log statements throughout support placement pipeline
- Console logging in React/Three.js is extremely expensive:
  - Serializes complex THREE.js objects (Vector3, Intersection, Euler, etc.)
  - Blocks main thread during formatting
  - Triggers React DevTools updates
  - Multiplies with number of supports in scene

**Console Logging Removed**
- `placement.ts`: 4 console.log statements per placement
- `SupportRenderer.tsx`: 3 console.log statements per support per render
- `page.tsx`: 4 console.log statements in click handler
- `SceneCanvas.tsx`: 2 console.log statements in mesh click handler
- **Total**: ~13 expensive console.log calls per support placement

**Performance Impact**
- **Before**: 4-5 second delay per support placement
- **After**: Instant (<50ms) support placement
- **Improvement**: ~100x faster support placement

**Files Modified**
- `src/supports/placement.ts`: Commented out debug logging
- `src/supports/SupportRenderer.tsx`: Commented out render logging
- `src/app/page.tsx`: Commented out click handler logging
- `src/components/scene/SceneCanvas.tsx`: Commented out mesh click logging

**Additional Fix**
- Updated backup script (`2. Backup\0. create-backup.ps1`) to include changelog in backups
- Changed exclusion from entire `2. Backup` directory to only `2. Backup\Backups` subdirectory
- Ensures changelog and backup script are preserved with each version

**Result**
- Support placement now instant and responsive
- No UI blocking during support operations
- Professional-grade interaction speed

## v14 - November 14, 2025
**BVH Raycasting Acceleration for Support Placement**

**Problem Solved**
- Severe performance issues with support placement on high-polygon models (100k+ triangles)
- Mouse movement lag during support preview due to unaccelerated raycasting
- Every mouse move triggered O(n) raycast testing every triangle sequentially
- Poor user experience compared to professional slicers like Lychee

**BVH Implementation**
- Implemented **Bounding Volume Hierarchy (BVH)** spatial acceleration structure
- Uses `three-mesh-bvh` library (bundled with `@react-three/drei`)
- Created `src/utils/bvh.ts` utility module with:
  - `initializeBVH()`: Patches Three.js prototypes globally at app startup
  - `accelerateGeometry()`: Builds BVH tree structure for loaded geometry
  - `disposeGeometryBVH()`: Cleanup function for memory management
- Integrated into `src/app/page.tsx` for global initialization
- Integrated into `src/hooks/useStlGeometry.ts` to accelerate loaded STL geometry

**How BVH Works**
- Organizes triangles into nested bounding boxes (tree structure)
- Raycasting traverses tree, skipping entire branches when ray misses bounding box
- Reduces complexity from O(n) to O(log n)
- Example: 100k triangles → ~17 tree levels instead of 100k sequential tests

**Performance Impact**
- **Raycasting speedup**: 100-1000x faster on high-poly meshes
- **Build time**: <100ms one-time cost per geometry load (typically <800ms even for 1M+ triangles)
- **Memory overhead**: ~10-20% of geometry size for tree structure
- **Support preview**: Instant response during all mouse movements and camera operations

**Code Simplification Benefits**
- **Removed camera raycast disabling**: No longer need 300ms debounce delays
- **Removed OrbitControls damping**: No longer needed to hide raycast lag
- **Instant support preview**: Works smoothly during zoom, rotate, pan operations
- **Simplified codebase**: Removed ~50 lines of camera movement state management

**Technical Details**
- Drop-in replacement: No changes to existing raycast code required
- Patches `THREE.BufferGeometry.prototype.computeBoundsTree`
- Patches `THREE.BufferGeometry.prototype.disposeBoundsTree`
- Replaces `THREE.Mesh.prototype.raycast` with accelerated version
- Automatically applied to all raycasts after initialization

**Verification**
- Console logs `[App] BVH acceleration initialized` on app start
- Console logs `[BVH] Computing bounds tree for geometry...` on STL load
- Console logs build time in milliseconds (e.g., `[BVH] Bounds tree computed in 788.60ms`)

**Documentation**
- Created `1. Documentation/BVH-RaycastOptimization.md` with full technical details

**Result**
- Professional-grade support placement performance matching Lychee slicer
- Smooth, responsive interaction with high-polygon models
- No performance compromises or workarounds needed

## v13 - November 14, 2025
**High-Polygon Model Performance Optimization**

**Problem Solved**
- Severe performance degradation with 1M+ triangle models (2-4 FPS during camera/transform operations)
- Root cause: Three.js raycasting performs expensive ray-triangle intersection tests on every mouse movement

**Performance Optimizations Implemented**

1. **Camera Movement Raycasting Optimization**
   - Disable raycasting during camera movement (rotate, zoom, pan)
   - 300ms debounce timeout for infinite scroll wheel support
   - Prevents rapid enable/disable toggling during continuous movements
   - Result: 60+ FPS during camera operations

2. **Transform Gizmo Raycasting Optimization**
   - Disable raycasting when transform gizmo is active (move, rotate, scale modes)
   - Only enabled in 'select' mode for mesh interaction
   - Result: No lag when hovering over transform gizmo

3. **Hide CrossSectionCap During Transformation**
   - CrossSectionCap hidden during active transformation
   - Prevents expensive triangle intersection calculations on every frame
   - Re-appears when transformation completes
   - Result: 60+ FPS during transform operations

4. **Defer React State Updates During Transformation**
   - Store intermediate transform values in ref instead of state
   - Prevents expensive re-renders during continuous transformation
   - Transform state still updated for gizmo positioning
   - Result: Smooth 60 FPS transformation

5. **Skip Expensive zRange Calculation During Transformation**
   - Use fast approximation during active transformation
   - Full geometry clone/transform/bounds calculation only when transformation completes
   - Result: Eliminates frame-blocking calculations

6. **Defer Expensive Post-Transform Operations**
   - `isTransforming` flag cleared immediately for instant UI response
   - Expensive operations (getLowestWorldZ, auto-snap) deferred with setTimeout
   - Result: Instant pointer release, no blocking

**Technical Implementation**
- Added `isTransforming` state and `pendingTransformRef` for transform tracking
- Added `hideCrossSectionCap` prop to SceneCanvas
- Modified `zRange` useMemo to use fast approximation during transformation
- Updated `onTransformChange` to use refs instead of immediate state updates
- Updated `onTransformEnd` to defer expensive operations
- Enhanced raycast disable logic: `isCameraMoving || (transformMode !== 'select')`
- Added `previousDisableState` ref to prevent unnecessary raycast function reassignments

**Performance Metrics**
- Camera movement: 240 FPS → 240 FPS (maintained)
- Transform operations: 2-10 FPS → 60+ FPS
- Gizmo hover: Severe lag → No lag
- Pointer release: Delayed → Instant
- Zoom with infinite scroll: Smooth with no violations

**Files Modified**
- `src/app/page.tsx`: Added transform state tracking, optimized handlers
- `src/components/scene/SceneCanvas.tsx`: Added hideCrossSectionCap prop, conditional rendering

## v12 - November 14, 2025
**Support Selection & Deletion System**

**New Features**
- Support selection: Click a support to select it (turns blue)
- Visual feedback:
  - **Hover**: White emissive glow on mouseover
  - **Selected**: Blue color (#00aaff)
  - **Normal**: Orange color (#ff8800)
- Support deletion: Press Delete or Backspace to remove selected support
- Deselection: Click empty space or model to deselect

**Technical Implementation**
- Added selection state management in `page.tsx`:
  - `selectedSupportId`: tracks currently selected support
  - `hoveredSupportId`: tracks hovered support for visual feedback
  - Keyboard event listener for Delete/Backspace
- Updated `SupportRenderer.tsx`:
  - Pointer event handlers (onPointerOver, onPointerOut, onClick)
  - Dynamic material colors based on selection/hover state
  - `supportClickedRef` to prevent canvas deselection when clicking support
- Updated `SceneCanvas.tsx`:
  - Canvas wrapper div with click handler for background deselection
  - Checks if click target is CANVAS element
  - Uses ref flag to distinguish support clicks from background clicks
- Mesh click handler deselects support when placing new ones

**Key Fixes**
- Fixed support selection not working: Canvas click handler was interfering
- Fixed background deselection: Used ref flag to track support clicks
- Fixed event propagation: stopPropagation() on support clicks

**Debug Tools**
- Console logging for selection/deselection events
- Green debug sphere still visible at shaft connection point

## v11 - November 13, 2025
**Support Mode Implementation - Phase 1: Support Placement & Rendering**

**New Features**
- Implemented full Support Mode with mode toggle in TopBar (Prepare/Support)
- Support placement via mouse click on model surface in Support mode
- Real-time hover preview showing semi-transparent support before placement
- Proper support geometry with three components:
  - **Tip**: Tapered frustum (0.3mm point → 1.0mm base) perpendicular to surface
  - **Shaft**: Vertical cylinder (1.0mm diameter) dropping to build plate
  - **Base**: Horizontal disk (5.0mm diameter, 0.3mm height) on build plate
- OrbitControls reconfigured: left-click disabled in Support mode for placement

**Technical Implementation**
- Created modular support system under `src/supports/`:
  - `types.ts`: Support data structures (SupportInstance, SupportSettings, etc.)
  - `state.ts`: Support collection management and settings
  - `placement.ts`: Raycast-based support placement logic
  - `SupportRenderer.tsx`: 3D rendering of placed supports
  - `SupportPreview.tsx`: Hover preview rendering
  - `SupportSidebar.tsx`: UI controls (placeholder)
- Integrated into main app:
  - `page.tsx`: Mode state, support collection, click/hover handlers
  - `SceneCanvas.tsx`: Event handling, preview/renderer integration
  - `TopBar.tsx`: Mode toggle buttons
- Support geometry correctly oriented:
  - Tip extends perpendicular to surface (away from model)
  - Only tip point touches model surface
  - Shaft drops vertically from tip base
  - Base always horizontal on XY plane

**Key Fixes During Development**
- Fixed Next.js hydration error by reordering TopBar elements
- Fixed OrbitControls capturing left-click (removed LEFT button in support mode)
- Fixed support placement coordinate space (world vs local)
- Fixed cone orientation (point at mesh, base at shaft)
- Fixed tip direction (away from model, not into it)
- Fixed tapered tip using correct diameter fields (pointDiameterMm vs diameterMm)
- Fixed base rotation to be flat on XY plane

**Debug Tools**
- Green sphere at shaft top showing connection point (temporary)
- Console logging for placement and rendering verification

**Next Steps**
- Remove debug sphere
- Implement SupportSidebar with parameter controls
- Add support deletion/selection
- Add support export to Lychee format

## v10 - November 13, 2025
**Voxel & Island Overlay Alignment After Rotation - FIXED**

**Problem**
- After rotating the model (with auto-lift) and rescanning islands, voxel volumes and island overlay markers did not align on Z.
- The scan pipeline already bakes the full transform (rotation, scale, auto-lifted position) into the geometry before slicing.
- Rendering layer was also applying the live transform (position/rotation/scale) to voxels/markers, effectively double-applying rotation and auto-lift Z.

**Technical Fix**
- Confirmed `onRunIslandScan` clones geometry, applies `-centerOffset`, then applies the full `transform` (including auto-lift) before calling `runIslandScan`.
- Verified voxel Z positions are derived from `scanBBox.min.z` and `layerHeightMm` (already world-space, including lift).
- Removed rotation/scale/Z from voxel and overlay render groups:
  - `IslandVoxelVisualization.tsx`: group now uses only X/Y from `transform.position` and forces Z=0.
  - `IslandOverlay.tsx`: group now uses only X/Y from `transform.position` and forces Z=0.
- Voxels and island markers are rendered in the world-space pose produced by the scan, without reapplying rotation or auto-lift.

**Behavior**
- Fresh load (no transforms): voxels and overlays align as before.
- Rotate model → auto-lift snaps lowest point to target height → **rescan**:
  - Scan uses rotated + lifted geometry; voxels/markers are generated in the correct world Z.
  - Rendering no longer re-applies rotation or Z, so alignment is exact.
- Move tool after scan: voxels and overlays still follow the model in X/Y (group uses X/Y translation only).

**Notes**
- Rotation always requires rescan; this logic was already in place and is unchanged.
- Auto-lift is applied once, via the geometry used for scan; visualization now reflects that correctly.

## v9 - November 12, 2025
**Transform Gizmo Customization Attempts - REVERTED**

**Attempted Changes**
- Attempted to customize TransformControls hover behavior to keep active handle at original color
- Tried multiple approaches: material overrides, useFrame updates, updateMatrixWorld interception
- All attempts either failed or broke gizmo functionality (axis lines disappeared, wrong positions)

**Technical Investigation**
- Read three.js TransformControls source code (lines 1789-1813)
- Found hover color change mechanism: `materialLib.active.color` applied on hover
- Discovered `_color` cache system for restoring original colors
- Attempted to override `updateMatrixWorld` to change active color dynamically

**Outcome**
- Reverted ALL customization attempts
- TransformControls restored to default drei behavior
- Yellow hover color is built-in and deeply integrated - cannot be easily overridden
- Auto-lift functionality remains intact and working correctly

**Lessons Learned**
- drei/three.js TransformControls has complex internal state management
- Hover behavior is tightly coupled with material updates in updateMatrixWorld
- Overriding internal methods breaks positioning and visibility logic
- Default behavior is reliable and should not be modified without full reimplementation

## v8 - November 12, 2025
**Auto-Lift & Layer Slider Integration - COMPLETE**

**Auto-Lift System**
- Implemented intelligent auto-lift that maintains model height after rotations
- Model automatically snaps to lift height (default 5mm) or build plate after rotation
- Manual Z movement disables auto-snap until Lift/Drop buttons clicked
- Added Lift and Drop buttons to Move controls for manual snap control

**Technical Implementation**
- `getLowestWorldZ()`: Calculates actual world Z of lowest vertex after ALL transforms
- Accounts for mesh centering offset, rotation, scale, and position
- Simple offset calculation: `offset = targetHeight - currentLowestWorldZ`
- No circular dependencies or accumulating errors

**Layer Slider Support**
- Added clipping plane support to voxel visualization
- Added clipping plane support to island overlay visualization  
- All visualizations (mesh, voxels, overlays) now clip with layer slider
- Separated expensive mesh generation from cheap clipping plane updates for performance

**Max Area Layer Fix**
- Fixed max area layer display to show world layer numbers (not model-relative)
- Added `layerHeightMm` and `zOffsetMm` props to IslandListCard and IslandHierarchyModal
- Formula: `World Layer = Model Layer + (zOffsetMm / layerHeightMm)`
- Layer numbers now consistent with layer slider

**UI Enhancements**
- Lift button (blue) - Snaps to lift height, re-enables auto-snap
- Drop button (gray) - Snaps to build plate (z=0), re-enables auto-snap
- Both buttons work regardless of auto-lift setting

**Behavior Summary**
- Auto-lift ON: Rotations snap to lift height automatically
- Auto-lift OFF: Rotations snap to build plate automatically
- Manual Z movement: Disables auto-snap completely
- Lift/Drop buttons: Re-enable auto-snap and snap to target
- Lift distance change: Auto-snap if enabled

**Bug Fixes**
- Fixed infinite loop in auto-snap useEffect
- Fixed bbox calculation to account for mesh centering
- Fixed placeholder chain resolution for complex island merges
- Fixed voxel mesh regeneration performance issue with layer slider

## v7 - November 11, 2025
**Critical Fix: Placeholder Chain Resolution**
- Fixed voxel visualization for complex models with cascading merges
- Added `resolveTrueParent()` function to follow placeholder chains to final parent
- Previously only resolved one level: placeholder → parent
- Now resolves full chains: placeholder → placeholder → placeholder → real parent
- Example: Island #25 → #23 → #19 → #16 → #1 (follows entire chain)

**The Problem**
- Complex models create chains of merged placeholder islands
- Old code: #25's pixels assigned to #23 (still a placeholder, gets filtered out)
- Result: Missing voxels in visualization for complex merge hierarchies

**The Solution**
- `resolveTrueParent()` walks the chain until finding a non-placeholder island
- Includes cycle detection for safety
- All placeholder pixels now correctly assigned to ultimate real parent
- Tested successfully on complex model with 110+ islands and 49 placeholders

**Impact**
- Voxel visualization now works correctly for complex models
- No missing geometry in merged island structures
- Handles arbitrary depth of merge hierarchies

## v6 - November 11, 2025
**Voxel Mesh Generation & Performance Optimization**
- Replaced individual voxel rendering with proper mesh generation
- Implemented greedy meshing algorithm - creates quad faces for exposed voxel sides
- For each surface voxel, checks 6 neighbors and creates faces only where needed
- Results in clean, efficient mesh geometry instead of thousands of individual cubes
- Significantly improved frame rate and visual quality

**Surface-Only Voxel Detection**
- Optimized to render only surface voxels, not solid interior
- Checks 6-connectivity neighbors (left, right, up, down, above, below)
- Voxel is surface if any neighbor is not part of the same island
- Reduces voxel count by 70-90% for solid shapes (massive performance gain)
- Maintains full visual appearance while rendering fraction of geometry

**Layer Range Optimization**
- Only scan layers where each island actually exists (`firstLayer` to `lastLayer`)
- Built actual layer range map from `islandLabelsPerLayer` to account for reassigned placeholder pixels
- Reduces iterations by 90%+ for small islands
- Pre-calculated grid constants to avoid repeated property access
- Removed debug logging overhead
- Overall speedup: 2-5x faster voxel generation

**Mesh Visibility Toggle**
- Added "Hide Mesh" button in top toolbar (next to Appearance)
- Eye icon toggles between showing/hiding the base STL mesh
- Allows viewing only island voxel visualization without base mesh
- Button shows eye icon (gray) when visible, eye-slash icon (blue) when hidden
- Integrated into `TopBar.tsx`, `page.tsx`, and `SceneCanvas.tsx`

**Technical Implementation**
- `generateIslandMesh()`: Creates BufferGeometry from voxel positions with proper faces
- Spatial hash map for O(1) neighbor lookups during face generation
- Each exposed side becomes a quad (2 triangles) in the final mesh
- Computed vertex normals for smooth shading
- Mesh follows exact voxel structure - accurate but blocky appearance

**Performance Metrics**
- Surface-only detection: 70-90% reduction in voxels for solid shapes
- Layer range filtering: 2-5x faster generation
- Greedy meshing: Single mesh per island vs thousands of instanced cubes
- Maintains 60 FPS with complex island structures

## v5 - November 11, 2025
**Island Voxel Visualization System - COMPLETE**
- Implemented full 3D voxel visualization for island volumes
- Each island rendered as colored voxels (small cubes) using InstancedMesh for performance
- Voxels positioned based on `islandLabelsPerLayer` pixel data - direct 1:1 mapping
- Created `IslandVoxelVisualization.tsx` component with GPU instancing (thousands of voxels per draw call)
- Created `IslandVoxelControls.tsx` UI panel with enable/disable, color schemes, opacity, show merged toggle

**Voxel Color Schemes**
- Unique: Golden ratio hue distribution for visually distinct colors per island
- Lifecycle: Green (active islands) vs Orange (merged islands)
- Height: Blue-to-red gradient based on island's vertical position

**Critical Bug Fixes**
- Fixed placeholder island pixel reassignment in `ScanOrchestrator.ts`
- Placeholder islands (#4, #5) now reassign their pixels to parent islands instead of being deleted
- Prevents gaps in voxel volumes where merged structures continue
- Fixed coordinate mapping: Y-axis negation for `grid.originZ` (stores -Y values)
- Fixed Z-axis alignment: Added `zOffset` from `scanBBox.min.z` to position voxels at correct height
- Voxels now perfectly aligned with mesh in all three dimensions (X, Y, Z)

**Implementation Details**
- Voxel size: `px_mm * 0.95` (slightly smaller for visual gaps between voxels)
- One InstancedMesh per island for easy selection/highlighting
- Selected islands render in yellow with 90% opacity
- Default `voxelShowMerged` to true to show all islands by default
- Integrated into `page.tsx` state and `SceneCanvas.tsx` rendering
- Documentation: Created `3. IslandVoxelVisualization.md` explaining concept and implementation

**Performance**
- Uses GPU instancing - renders 1M+ voxels at 60 FPS
- Single draw call per island (very efficient)
- No geometry splitting or vertex color painting needed

**Key Insight**
- Islands are detected pixel-by-pixel, so each pixel already has an Island ID in `islandLabelsPerLayer[layer]`
- Voxel approach directly visualizes this underlying data structure
- More accurate than mesh painting approaches that struggle with triangle boundaries

## v4 - November 10, 2025
**Island List UI Reorganization**
- Created new `IslandListCard` component for island ID list
- Separated island list from volume visualization controls
- Island IDs card now has its own dedicated section in sidebar
- Simplified `IslandVolumeControls` to only contain visualization settings (color scheme, opacity)
- Improved UI modularity and clarity

**Island Selection Highlighting**
- Selected islands now highlight in bright yellow (#ffff00) in 3D view
- Added `selectedIslandId` prop through component chain (page.tsx → SceneCanvas → IslandOverlay)
- Selected islands render at 90% opacity for better visibility
- Non-selected islands remain in normal red color
- Makes it easy to identify selected islands in the 3D viewport

**Bug Investigation**
- Identified issue with phantom island overlays appearing in mid-air
- Problem traced to `buildIslandGeometry` filtering logic in `islandOverlayLogic.ts`
- Issue: mixing horizontal island detection (baseLabels) with vertical geometry appearance (firstHit)
- Creates false island shapes from pixels that aren't actually part of the island
- Fix pending

## v3 - November 10, 2025
**Rasterized Cross-Section Cap Rendering**
- Added rasterized rendering mode to CrossSectionCap component
- Implemented `rasterizeLoops` function for polygon-to-pixel grid conversion
- Uses InstancedMesh for massive performance improvement (single draw call vs thousands)
- Pixel grid matches island scanner resolution (controlled by `pxMm` setting)
- Right-click layer slider thumb to toggle between smooth and rasterized views
- Visual feedback shows exact pixel grid used for island detection

**Layer Slider Precision Controls**
- Added shift-key modifier for fine-grained layer control (10x slower movement)
- Shift mode locks on mouse-down, can be activated mid-drag
- Shift mode persists until mouse-up to prevent accidental snapping
- Applies to both dragging and mouse wheel scrolling

**Layer Slider Visual Enhancements**
- Pixelated thumb in raster mode (28px with 3x3px blocks)
- Smooth circular thumb in normal mode (20px)
- WiFi-style precision indicator arcs when shift is held
- Smooth curved arcs for normal mode, pixelated arcs for raster mode
- 7px gap from thumb edge with consistent spacing
- Shortened arc length (~60 degrees) matching WiFi icon style

**Island Overlay Improvements**
- Fixed taper orientation (now tapers at bottom/base instead of top)
- Increased cylinder polygon count to 32 segments for smoother circles
- Added minimum island pixel size filter (default 5 pixels)
- Added UI control for minimum island size in Island Scan card
- Islands now use actual pixel shape instead of always falling back to circles

## v2 - November 10, 2025
**Island Overlay Coordinate System Overhaul**
- Fixed island scanner to use Z-axis as vertical (was incorrectly using Y-axis)
- Updated `ScanOrchestrator.ts` to slice along Z-axis using `computeLoopsAtZ`
- Added `computeLoopsAtZ` function to `Slice2D.ts` for Z-up coordinate system
- Fixed island overlay geometry to use Z as vertical axis throughout
- Updated `IslandMarker` type: `centerZ` → `centerY`, `baseY` → `baseZ`
- Corrected coordinate mapping in `islandOverlayLogic.ts` with detailed comments explaining grid coordinate system

**Transform-Aware Island Scanning**
- Island scanner now scans transformed geometry along global Z-axis
- Applies centerOffset and transform matrix to geometry before scanning
- Stores transformed bounding box for correct marker positioning
- Island overlays now render in world space without double-transformation
- Fixed XY and Z positioning of island markers on rotated/transformed models

**Island Overlay Shape Improvements**
- Added minimum size constraint (0.5mm) for visibility
- Implemented circular cylinder geometry for small/round islands
- Maintained convex hull shapes for larger islands
- Added `createCircleFromPixels` function for better round island representation
- Fixed coordinate system comments to clarify confusing `grid.originZ` naming

**Code Documentation**
- Added comprehensive coordinate system documentation to `computeIslandMarkers`
- Explained grid-to-world coordinate conversion formulas
- Clarified legacy naming conventions (grid.originZ stores -Y values)

## v1 - November 10, 2025
**Transform Controls & Model Manipulation**
- Implemented complete transform system with Move, Rotate, and Scale modes
- Created TransformToolbar with mode selection buttons
- Built mode-specific control cards (MoveControls, RotateControls, ScaleControls)
- Integrated TransformGizmo for 3D viewport manipulation
- Fixed gizmo pivot to center of mass for proper rotation/scaling
- Implemented auto-lift functionality with persistent settings

**Cross-Section Cap Improvements**
- Updated CrossSectionCap to work with transformed geometry
- Implemented world-space slicing that follows model transforms
- Fixed cap positioning to update in real-time with model movement/rotation

**Geometry & Rendering**
- Fixed vertex color preservation when centering geometry
- Implemented group-based mesh structure for proper transform handling
- Maintained original geometry to preserve vertex colors

**Island Detection & Volume**
- Fixed island volume calculation for merged islands
- Corrected `finalizeIslands` bug in IslandTracker
- Removed debug console.log statements from ScanOrchestrator
- Proper volume calculation using pixel area × layer height

**Initial Features**
- STL file loading and visualization
- Z-up coordinate system with proper camera setup
- Layer-based slicing with vertical slider
- Island detection and tracking across layers
- Island overlay visualization with configurable brush
- 3D island volume visualization with multiple color schemes
- Cross-section cap rendering at slice heights
- Dark UI with collapsible control cards
